--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -5,9 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Learning Log</p>
+    {% extends "learning_logs/base.html"  %}
 
-    <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
+    {% block content %}
+        <p>
+            Learning Log helps you keep track of your learning, for any topic you're
+            learning about.
+        </p>
+    {% endblock content %}
 
 </body>
 </html>
