--- a/learning_log/learning_logs/templates/learning_logs/topic.html
+++ b/learning_log/learning_logs/templates/learning_logs/topic.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% extends  'learning_logs/base.html'%}
+{% extends 'learning_logs/base.html' %}
 
-    {% block content %}
-        <p>Topic: {{ topic }}</p>
+{% block content %}
+    <p>Topic: {{ topic }}</p>
 
-        <p>Entries:</p>
-        <ul>
-            {% for entry in entries %}
-                <li>
-                    <p>{{ entry.date_added|date:'d M, Y H:i' }}</p>
-                    <p>{{ entry.text|linebreaks }}</p>
-                </li>
-            {% empty %}
-                <li>
-                    There are no entries for this topic yet.
-                </li>
-            {% endfor %}
-        </ul>
+    <p>Entries:</p>
+    <p>
+        <a href="{% url 'learning_logs:new_entry' topic.id %}">
+            add new entry
+        </a>
+    </p>
+    <ul>
+        {% for entry in entries %}
+            <li>
+                <p>{{ entry.date_added|date:'d M, Y H:i' }}</p>
+                <p>{{ entry.text|linebreaks }}</p>
+                <p>
+                    <a href="{% url 'learning_logs:edit_entry' entry.id %}">
+                        edit entry
+                    </a>
+                </p>
+            </li>
+        {% empty %}
+            <li>
+                There are no entries for this topic yet.
+            </li>
+        {% endfor %}
+    </ul>
 
-    {% endblock content %}
-</body>
-</html>
+{% endblock content %}
